fix script vuepress build

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
-    "deploy": "deploy.sh"
+    "deploy": "sh deploy.sh"
   },
   "keywords": [],
   "author": "",
