--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "awsomeblog",
+  "name": "awesome-blog",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "日常写写学到的新东西，希望能帮到更多的人",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
     "dev": "vuepress dev docs",
     "deploy": "deploy.sh"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tangjj1996/awesome-blog.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Tangj",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tangjj1996/awesome-blog/issues"
+  },
   "devDependencies": {
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.3.1"
   }
 }
